[package]
name = "mcbe-rust-bindings"
version = "0.1.0"
edition = "2024"

[dependencies]
spinwait = "0.1.3"

[dependencies.windows]
version = "0.61.1"
features = [
    "System",
    "Storage",
    "Storage_Search", 
    "ApplicationModel", 
    "Management_Core", 
    "Win32_System_Com", 
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug"
]